--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "juice-box",
   "version": "0.1.0",
   "private": true,
+  "main": "./server/index.js",
+  "proxy": "http://localhost:4040",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
